--- a/ytdl/config.conf
+++ b/ytdl/config.conf
@@ -1,10 +1,10 @@
 -i
 
 # save to "channel name (channel id)/date - title - duration [res] [id]/title.ext
--o "%(uploader)s (%(uploader_id)s)/%(upload_date)s - %(title)s - (%(duration)ss) [%(resolution)s] [%(id)s]/%(title)s.%(ext)s"
+-o "Downloads/%(uploader)s (%(uploader_id)s)/%(upload_date)s - %(title)s - (%(duration)ss) [%(resolution)s] [%(id)s]/%(title)s.%(ext)s"
 
 # save to "playlist name (id)/number - title [id]/title.ext
-# -o "%(playlist_uploader)s - %(playlist_title)s (%(playlist_id)s)/%(playlist_index)s - %(title)s [%(id)s]/%(title)s.%(ext)s"
+# -o "Downloads/%(playlist_uploader)s - %(playlist_title)s (%(playlist_id)s)/%(playlist_index)s - %(title)s [%(id)s]/%(title)s.%(ext)s"
 
 # download best video <=720p but keep best audio
 # -f "bestvideo[height<=720]+bestaudio/"
